--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@vercel/analytics": "^1.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.10.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.10.0"
   },
